// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Detail /> +++ render the component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <AlertProvider>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "0wux6n",
              "pathname": "/1",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "0wux6n",
            "pathname": "/1",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Route
        component={[Function]}
        path="/:id"
      >
        <withRouter(Connect(Detail))
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "0wux6n",
                  "pathname": "/1",
                  "search": "",
                  "state": undefined,
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "0wux6n",
                "pathname": "/1",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "0wux6n",
              "pathname": "/1",
              "search": "",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {
                "id": "1",
              },
              "path": "/:id",
              "url": "/1",
            }
          }
        >
          <Connect(Detail)
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "canGo": [Function],
                "createHref": [Function],
                "entries": Array [
                  Object {
                    "hash": "",
                    "key": "0wux6n",
                    "pathname": "/1",
                    "search": "",
                    "state": undefined,
                  },
                ],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "index": 0,
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "key": "0wux6n",
                  "pathname": "/1",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
            location={
              Object {
                "hash": "",
                "key": "0wux6n",
                "pathname": "/1",
                "search": "",
                "state": undefined,
              }
            }
            match={
              Object {
                "isExact": true,
                "params": Object {
                  "id": "1",
                },
                "path": "/:id",
                "url": "/1",
              }
            }
          >
            <Detail
              articles={
                Array [
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 1,
                    "image": "",
                    "isRead": true,
                    "name": "How to use hooks in React?",
                    "preview": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
                  },
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 2,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React? (||)",
                  },
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 3,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React?",
                  },
                  Object {
                    "date": "2021-04-30",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 4,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React?",
                  },
                  Object {
                    "date": "2021-11-14",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 5,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React?",
                  },
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 6,
                    "image": "",
                    "isRead": false,
                    "name": "second page",
                  },
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 7,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React?",
                  },
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 8,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React?",
                  },
                  Object {
                    "date": "2021-05-20",
                    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                    "id": 9,
                    "image": "",
                    "isRead": false,
                    "name": "How to use hooks in React?",
                  },
                ]
              }
              editMode={true}
              handleAddElement={[Function]}
              handleEditElement={[Function]}
              handleRead={[Function]}
              history={
                Object {
                  "action": "POP",
                  "block": [Function],
                  "canGo": [Function],
                  "createHref": [Function],
                  "entries": Array [
                    Object {
                      "hash": "",
                      "key": "0wux6n",
                      "pathname": "/1",
                      "search": "",
                      "state": undefined,
                    },
                  ],
                  "go": [Function],
                  "goBack": [Function],
                  "goForward": [Function],
                  "index": 0,
                  "length": 1,
                  "listen": [Function],
                  "location": Object {
                    "hash": "",
                    "key": "0wux6n",
                    "pathname": "/1",
                    "search": "",
                    "state": undefined,
                  },
                  "push": [Function],
                  "replace": [Function],
                }
              }
              location={
                Object {
                  "hash": "",
                  "key": "0wux6n",
                  "pathname": "/1",
                  "search": "",
                  "state": undefined,
                }
              }
              match={
                Object {
                  "isExact": true,
                  "params": Object {
                    "id": "1",
                  },
                  "path": "/:id",
                  "url": "/1",
                }
              }
            >
              <div
                className="detail"
              >
                <div
                  className="buttons"
                >
                  <button
                    className="button button-back"
                    onClick={[Function]}
                  >
                    Back
                  </button>
                  <button
                    className="button button-save"
                    onClick={[Function]}
                  >
                    Save
                  </button>
                </div>
                <div
                  className="addImage"
                >
                  <input
                    accept="image/*"
                    id="file"
                    name="image"
                    onChange={[Function]}
                    type="file"
                  />
                  <img
                    alt=""
                    src=""
                  />
                </div>
                <input
                  className="input input__name"
                  name="name"
                  onChange={[Function]}
                  type="text"
                  value="How to use hooks in React?"
                />
                <textarea
                  className="input input__desc"
                  name="desc"
                  onChange={[Function]}
                  value="Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum."
                />
                <p
                  className="date"
                >
                  2021-05-20
                </p>
              </div>
            </Detail>
          </Connect(Detail)>
        </withRouter(Connect(Detail))>
      </Route>
    </Router>
  </AlertProvider>
</Provider>
`;

exports[`<Detail /> +++ render witchout id 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <AlertProvider>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "0wux6n",
              "pathname": "/1",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "0wux6n",
            "pathname": "/1",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <withRouter(Connect(Detail))>
        <Connect(Detail)
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "0wux6n",
                  "pathname": "/1",
                  "search": "",
                  "state": undefined,
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "0wux6n",
                "pathname": "/1",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "0wux6n",
              "pathname": "/1",
              "search": "",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": false,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
        >
          <Detail
            articles={
              Array [
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 1,
                  "image": "",
                  "isRead": true,
                  "name": "How to use hooks in React?",
                  "preview": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
                },
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 2,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React? (||)",
                },
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 3,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React?",
                },
                Object {
                  "date": "2021-04-30",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 4,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React?",
                },
                Object {
                  "date": "2021-11-14",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 5,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React?",
                },
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 6,
                  "image": "",
                  "isRead": false,
                  "name": "second page",
                },
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 7,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React?",
                },
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 8,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React?",
                },
                Object {
                  "date": "2021-05-20",
                  "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id deleniti suscipit nisi mollitia aliquid expedita earum voluptates excepturi, quod ratione ut a, laboriosam tempore blanditiis quasi aspernatur est adipisci tenetur quis vero voluptate fugiat. Minus necessitatibus fugiat non at, fuga quibusdam tenetur ratione quasi numquam vel explicabo nesciunt ipsum.",
                  "id": 9,
                  "image": "",
                  "isRead": false,
                  "name": "How to use hooks in React?",
                },
              ]
            }
            editMode={true}
            handleAddElement={[Function]}
            handleEditElement={[Function]}
            handleRead={[Function]}
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "canGo": [Function],
                "createHref": [Function],
                "entries": Array [
                  Object {
                    "hash": "",
                    "key": "0wux6n",
                    "pathname": "/1",
                    "search": "",
                    "state": undefined,
                  },
                ],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "index": 0,
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "key": "0wux6n",
                  "pathname": "/1",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
            location={
              Object {
                "hash": "",
                "key": "0wux6n",
                "pathname": "/1",
                "search": "",
                "state": undefined,
              }
            }
            match={
              Object {
                "isExact": false,
                "params": Object {},
                "path": "/",
                "url": "/",
              }
            }
          >
            <div
              className="detail"
            >
              <div
                className="buttons"
              >
                <button
                  className="button button-back"
                  onClick={[Function]}
                >
                  Back
                </button>
                <button
                  className="button button-save"
                  onClick={[Function]}
                >
                  Save
                </button>
              </div>
              <div
                className="addImage"
              >
                <input
                  accept="image/*"
                  id="file"
                  name="image"
                  onChange={[Function]}
                  type="file"
                />
                <img
                  alt=""
                  src=""
                />
              </div>
              <input
                className="input input__name"
                name="name"
                onChange={[Function]}
                type="text"
                value=""
              />
              <textarea
                className="input input__desc"
                name="desc"
                onChange={[Function]}
                value=""
              />
              <p
                className="date"
              >
                2021-12-23
              </p>
            </div>
          </Detail>
        </Connect(Detail)>
      </withRouter(Connect(Detail))>
    </Router>
  </AlertProvider>
</Provider>
`;
